# kenku_control

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: controller.rs  lib.rs  main.rs  playlist.rs  soundboard.rs  tests.rs  utils.rs
src/playlist/: mod.rs  response.rs  track.rs
src/soundboard/: mod.rs  response.rs  sound.rs
tests/: basic_commands_test.rs  basic_usage_test.rs  playlist_playback_test.rs
