[package]
name = "kenku_control"
version = "0.1.1"
edition = "2021"
authors = ["Lucas-BRT"]
description = "A library for manage Kenku FM using Kenku Remote"
license = "MIT"
repository = "https://github.com/Lucas-BRT/kenku_control"
documentation = "https://docs.rs/kenku_control/0.1.0/kenku_control/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.37.0", features = ["full"]}
rand = "0.8.5"

